[package]
name = "associative-memory-ai-companion"
version = "0.0.1"
edition = "2021"

[dependencies]
openai_api_rust = "0.1.9"
clap = {  version = "4.5.23", features = ["derive"] }
whoami = "1.5.2"
shellwords = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4.5"
chrono = { version = "0.4.38", features = ["serde"] }
homedir = "0.3.4"
